# oop_lab7

./: CMakeLists.txt  README.md
src/: async_game.hpp  async_npc.hpp  core.cpp  core.hpp  factory_npc.hpp  main.cpp  main_async.cpp  npc.cpp  npc.hpp  observer.hpp  orc.cpp  orc.hpp  rogue.cpp  rogue.hpp  visitor_simulate_fight.hpp  werewolf.cpp  werewolf.hpp
tests/: test_async.cpp
